[gd_scene load_steps=7 format=2]

[ext_resource path="res://effects/PuzzlePieces.png" type="Texture" id=1]
[ext_resource path="res://scripts/PuzzlePiece.gd" type="Script" id=2]
[ext_resource path="res://effects/BopSounds.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/reset_hover.png" type="Texture" id=4]
[ext_resource path="res://sprites/reset_default.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="PuzzlePiece" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -8, -8 )
vframes = 12
hframes = 3
frame = 14

[node name="BopSounds" parent="." instance=ExtResource( 3 )]

[node name="ResetButton" type="TextureButton" parent="."]
visible = false
margin_right = 16.0
margin_bottom = 16.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_PuzzlePiece_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_PuzzlePiece_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PuzzlePiece_mouse_exited"]
[connection signal="mouse_entered" from="ResetButton" to="." method="_on_ResetButton_mouse_entered"]
[connection signal="mouse_exited" from="ResetButton" to="." method="_on_ResetButton_mouse_exited"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
